# src/pages/api/v1/roadmaps/[loadmap_id]/index.ts
@@ -4,10 +4,11 @@ import { ResponseData } from 'schemaHelper'
 const dummyData: ResponseData<'/roadmaps/{roadmap_id}', 'get'> = {
   id: 'hoge',
   author_id: 'hoge',
-  title: 'hoge',
+  title: 'hoge マップ',
   favorited: false,
   favorite_count: 1,
-  tags: [],
+  tags: ['tag1', 'tag2'],
+  locked: false,
   edges: [
     {
       id: '1',
@@ -19,27 +20,28 @@ const dummyData: ResponseData<'/roadmaps/{roadmap_id}', 'get'> = {
   vertexes: [
     {
       id: '1',
+      type: 'DEFAULT',
       x_coordinate: 100,
-      y_coordinate: 150,
-      from_sec: 50,
-      to_sec: 55,
-      summary: 'g3',
-      url: '166XOLey5A4',
-      title: '武蔵野S',
+      y_coordinate: 350,
+      title: 'hoge',
+      content: 'hogehogehoge',
+      achieved: false,
     },
     {
       id: '2',
+      type: 'YOUTUBE',
       x_coordinate: 100,
-      y_coordinate: 250,
-      from_sec: 50,
-      to_sec: 55,
-      summary: 'g1やぞ',
-      url: 'ncI1wORn9F4',
+      y_coordinate: 900,
+      youtube_id: 'ncI1wORn9F4',
+      youtube_start: 50,
+      youtube_end: 55,
+      content: 'g1やぞ',
       title: '01 JC',
+      achieved: true,
     },
   ],
-  created_at: 'hoge',
-  updated_at: 'hoge',
+  created_at: '2022-06-29T22:00:99+09:00',
+  updated_at: '2022-06-29T22:00:00+09:00',
 }
 
 export default async function handler(req: NextApiRequest, res: NextApiResponse) {
