# src/pages/api/v1/roadmaps/[loadmap_id]/vertex/[vertex_id]/achievement.ts
@@ -1,0 +1,7 @@
+import type { NextApiRequest, NextApiResponse } from 'next'
+
+export default async function handler(req: NextApiRequest, res: NextApiResponse) {
+  if (req.method === 'POST') {
+    res.status(200).json({ status: 'ok' })
+  }
+}
